# demo-base-fastapi

./: .env.example  DOCKER.md  Makefile  README.md  compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.in  requirements.in
backend/api/: exceptions.py  main.py  router.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 3c42338693c7_init.py
backend/api/auth/: __init__.py  auth_dependencies.py  auth_dtos.py  auth_exceptions.py  auth_router.py  auth_service.py  password_hasher.py  token_service.py
backend/api/config/: config_dependencies.py  config_service.py  load_config.py  models.py
backend/api/db/: __init__.py  db_async_client.py  db_dependencies.py  db_exceptions.py
backend/api/middleware/: __init__.py  auth_middleware.py  error_middleware.py
backend/api/schemas/: __init__.py  user.py
backend/api/user/: __init__.py  user_dependencies.py  user_dtos.py  user_exceptions.py  user_repository.py  user_router.py  user_service.py
backend/api/utils/: dtos.py  get_deployment_type.py  get_logger.py
backend/resources/: default_config.yaml  prod_config.yaml  test_config.yaml
backend/tests/: conftest.py
backend/tests/api/auth/: test_auth_router.py  test_auth_service.py  test_password_hasher.py  test_token_service.py
backend/tests/api/config/: test_load_config.py
backend/tests/api/middleware/: test_auth_middleware.py  test_error_middleware.py
backend/tests/api/user/: test_user_repository.py  test_user_router.py  test_user_service.py
backend/tests/api/utils/: test_get_deployment_type.py
(+1 files in other folders)
